# english-vocabulary-helper

./: .gitignore  README.md  agents.md  install.bat  install.sh  main.py  pyproject.toml  requirements.txt
prompts/: vocabulary_assistant.yaml
